<resources>
    <string name="app_name">Bla Bla Wild</string>
    <string name="action_settings">Settings</string>
    <string name="search_text">Rechercher</string>
    <string name="search_departure">Départ</string>
    <string name="search_destination">Destination</string>
    <string name="search_date">Date</string>
    <string name="search_button">Rechercher</string>
    <string name="go">Recherchez un trajet</string>
    <string name="createTripButton">Proposer un trajet</string>
    <string name="create">Créer un trajet</string>
    <string name="error">Veuillez entrer une destination et un ville de départ et une date</string>

    <string name="departure">Départ</string>
    <string name="destination">Destination</string>
    <string name="price">Prix</string>
    <string name="date">Date</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="auth_failed">Echec</string>
    <string name="account">Mon Compte</string>
    <string name="sign_up">Créer un compte</string>
    <string name="login">Connexion</string>
    <string name="email">email</string>
    <string name="password">Mot de passe</string>
    <string name="validate_form">Valider</string>
    <string name="logout">Déconnexion</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="update_profile_button">Enregistrer les moifications</string>


</resources>
