<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_submit_itinerary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.wcs.blablawild.SubmitItineraryActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/departure"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:id="@+id/departure"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/destination"
        android:ems="10"
        android:layout_below="@+id/departure"
        android:layout_alignRight="@+id/departure"
        android:layout_alignEnd="@+id/departure"
        android:layout_marginTop="22dp"
        android:id="@+id/destination" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/price"
        android:ems="10"
        android:layout_marginTop="125dp"
        android:id="@+id/price"
        android:layout_below="@+id/destination"
        android:layout_alignLeft="@+id/destination"
        android:layout_alignStart="@+id/destination" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/date"
        android:ems="10"
        android:layout_below="@+id/destination"
        android:layout_alignRight="@+id/destination"
        android:layout_alignEnd="@+id/destination"
        android:layout_marginTop="39dp"
        android:id="@+id/date" />

    <Button
        android:text="@string/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_alignLeft="@+id/price"
        android:layout_alignStart="@+id/price"
        android:layout_marginTop="37dp"
        android:id="@+id/create" />
</RelativeLayout>
