<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.wcs.blablawild.MainActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <Button
        android:text="@string/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go"
        android:onClick="goToSearch"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/createTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/go"
        android:layout_marginTop="23dp"
        android:onClick="goTocreateTrip"
        android:id="@+id/createTripButton"
        android:layout_alignRight="@+id/go"
        android:layout_alignEnd="@+id/go"
        android:layout_alignLeft="@+id/go"
        android:layout_alignStart="@+id/go" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="59dp"
        android:layout_height="29dp"
        android:text="@string/login"
        android:onClick="goToSignin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/createTripButton"
        android:layout_alignRight="@+id/createTripButton"
        android:layout_alignEnd="@+id/createTripButton" />

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="58dp"
        android:layout_height="33dp"
        android:text="@string/sign_up"
        android:onClick="goToSignup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignBottom="@+id/textViewLogin"
        android:layout_alignLeft="@+id/createTripButton"
        android:layout_alignStart="@+id/createTripButton"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <Button
        android:id="@+id/buttonAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:text="@string/account"
        android:onClick="openAccount"
        />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:layout_marginTop="33dp"
        android:layout_alignLeft="@+id/buttonAccount"
        android:layout_alignStart="@+id/buttonAccount"
        android:layout_alignRight="@+id/buttonAccount"
        android:layout_alignEnd="@+id/buttonAccount" />

</RelativeLayout>
