<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.blablawild.AccountActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="131dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/textViewName"
        android:onClick="updateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="107dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="103dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:text="@string/logout"
        android:onClick="logout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        tools:layout_editor_absoluteY="455dp"
        tools:layout_editor_absoluteX="46dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="174dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/choose_a_username"
        android:layout_marginRight="105dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:imeActionId="@+id/userDisplayName"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="207dp"
        android:layout_height="59dp"
        android:text="@string/update_profile_button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="154dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:layout_editor_absoluteY="375dp"
        tools:layout_editor_absoluteX="51dp" />
</android.support.constraint.ConstraintLayout>
